envs/dev/platform/k8s/network-policies/kyverno/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kyverno
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
